plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
}

group = 'ru.codingbros'
version = '0.0.1-SNAPSHOT'



java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	implementation 'org.springframework.security:spring-security-crypto:6.0.2'
	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'

	//security
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation('io.jsonwebtoken:jjwt:0.9.1')
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	manifest {
		attributes(
				'Main-Class': 'ru.codingbros.blameyourcode.BlameYourCodeApplication'
		)
	}
}

bootJar {
	archiveClassifier = 'uber'
}

jar.enabled = false